--- a/home.html
+++ b/home.html
@@ -7,6 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is build week 1</h1>
+    <nav>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
